# cpp-sample-app

./: CMakeLists.txt  Dockerfile.cpp  readme.md
src/: helloworld.cpp
